kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi1
spec:
  selector:
    app: fastapi1
  ports:
    - name: http
      protocol: TCP
      port: 8001
      targetPort: 8001

---

apiVersion: v1
kind: Service
metadata:
  name: fastapi2
spec:
  selector:
    app: fastapi2
  ports:
    - name: http
      protocol: TCP
      port: 8001
      targetPort: 8001
